modificando algumas coisas